--- a/index.htm
+++ b/index.htm
@@ -15,6 +15,11 @@
   </script>
 </head>
 <body>
-  <canvas style="border-bottom: 1px solid black;border-right: 1px solid black" id="game" width="1024px" height="832px"></canvas>
+  <div class="score-container">
+    <span id="score"></span>
+    <span style="display: inline-block; width: 128px;"></span>
+    <span id="best-move"></span>
+  </div>
+  <canvas style="border-bottom: 1px solid black;border-right: 1px solid black" id="game" width="1024px" height="768px"></canvas>
 </body>
 </html>
