Optimize rendering and physics performance

--- a/index.htm
+++ b/index.htm
@@ -44,6 +44,6 @@
      <option value="move">Move</option>
    </select>
   </div>
-  <canvas style="border-bottom: 1px solid black;border-right: 1px solid black" id="game" width="1024px" height="768px"></canvas>
+  <canvas id="game" width="1024px" height="768px"></canvas>
 </body>
 </html>
