--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <meta name="viewport" content="initial-scale=0.7, maximum-scale=1">
   <title>Match 3</title>
   <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
   <script type="module">
@@ -44,6 +45,6 @@
      <option value="move">Move</option>
    </select>
   </div>
-  <canvas id="game" width="1024px" height="768px"></canvas>
+  <canvas id="game" width="300px" height="300px"></canvas>
 </body>
 </html>
